# LanDock

./: .gitignore  CHANGELOG.md  README.md  index.js  package-lock.json  package.json  update.json
.github/workflows/: release.yml
landock-release/: index.js  package-lock.json  package.json  test-formidable.js
landock-release/public/: client.html  client.js  dashboard.js  global.css  index.html  manifest.json  sw.js
landock-release/src-tauri/: tauri.conf.json
landock-release/src-tauri/src/: lib.rs
public/: client.html  client.js  dashboard.js  index.html  manifest.json  sw.js
scripts/: build_windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
