[package]
name = "app"
version = "1.2.2"
description = "LanDock Hub - PC Control & File Share"
authors = ["Aanish Farrukh"]
license = "MIT"
repository = "https://github.com/sudoaanish/LanDock"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
